--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ h3 {
   letter-spacing: 2%;
   color: #2e2f42;
 }
-.section-2 p {
+.section-two p {
   font-size: 16px;
   font-weight: 400;
   color: #2e2f42;
