--- a/css/styles.css
+++ b/css/styles.css
@@ -108,7 +108,8 @@ h2 {
 h3 {
   font-size: 20px;
   font-weight: 500;
-  letter-spacing: 2%;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
   color: #2e2f42;
 }
 .section-two p {
