--- a/css/styles.css
+++ b/css/styles.css
@@ -112,10 +112,10 @@ h3 {
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
-.section-two p {
+.sec-two-p {
   font-size: 16px;
   font-weight: 400;
-  color: #2e2f42;
+  color: #434455;
   line-height: 1.5em;
   letter-spacing: 0.02em;
   /* text-align: left; */
