--- a/css/styles.css
+++ b/css/styles.css
@@ -69,7 +69,7 @@ ul {
 
 .section-one {
   background-color: #2e2f42;
-  width: 1440px;
+
   height: 600px;
 }
 .title {
@@ -146,7 +146,7 @@ p {
   /* text-align: center; */
 }
 
-.portfolio li {
+.section-four li {
   width: 360px;
   height: 420px;
   border: 1px solid #e7e9fc;
